--- a/views/login.html
+++ b/views/login.html
@@ -1,11 +1,11 @@
-<section>
+<section id="form">
+    <link rel="stylesheet" href="/css/form.css">
+    <h2>login</h2>
     <form method="post">
         <label for="username">username</label>
-        <input type="text" placeholder="username">
+        <input type="text" placeholder="username or email" name="username">
         <label for="">password</label>
         <input type="text" placeholder="password">
-        <label for="">login</label>
-        <input type="btn" placeholder="login">
         
     </form>
 </section>
