--- a/views/navbar.html
+++ b/views/navbar.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
       <link rel="stylesheet" href="style.css">
+    
+    
 </head>
 <body>
- <section class="main">
+ <!-- <section class="main">
     <nav class="header">
         <h1>Wodis casual</h1>
         <ul class="nav_links">
@@ -44,6 +47,21 @@
 
     </div>
     
-</section>
+</section> -->
+
+    <section class="nav-handle">
+         <link rel="stylesheet" href="/css/nav.css">
+            <div class="nav">
+                <div>
+                    <div class="logo">ADMIN</div>
+                </div>
+                <div class="items">
+                    <a href="http://">link</a>
+                    <a href="http://">link</a>
+                    <button>Hello</button>
+                </div>
+            </div>
+     </section>
+
 </body>
 </html>
