--- a/css/nav.css
+++ b/css/nav.css
@@ -1,16 +1,20 @@
+body{
+    margin: 0px;
+}
 .nav-handle{
     font-family: sans-serif;
 }
 .nav-handle>.nav{
-    padding: 10px;
+    padding: 18px 15px;
     display: flex;
     justify-content: space-between;
-    box-shadow: -2px 2px 5px rgb(20, 19, 19);
+    box-shadow: -2px 2px 5px rgb(0, 0, 0,0.233);
     margin-bottom: 20px;
+    align-items: center;
 }
 
 .nav-handle>nav>.items>*{
-    margin: 0px 15px 0px 15px; 
+    margin: 0px 15px 0px 15px !important;  
     font-weight: bold;
-    text-decoration: none;
+    text-decoration: none; 
 }
